--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,8 @@
 @import 'sass-bootstrap/lib/bootstrap';
 
 html, body {
+    margin: 0;
+    padding: 0;
     width: 100%;
     height: 100% ;       
 }
@@ -12,6 +14,8 @@ html, body {
 }
 
 #ss-canvas {
+    position: absolute;
     width: 100%;
     height: 100% ;
+    overflow: hidden;
 }
